--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-feature android:name="android.hardware.camera" />
 
     <application
+        android:name="ScreenshotApplication"
         android:allowBackup="true"
         android:icon="@drawable/camera_button"
         android:label="@string/app_name"
